# Vk_Canvas_Lb_LAW

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  USAGE.md  build_msvc.ps1
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/shaders/: composite_frag.spv  coverage.spv
app/src/main/cpp/: android_platform.cc  android_platform.hh  app.cc  app.hh  canvas.cc  canvas.hh  canvas_host.cc  canvas_host.hh  compute_context.hh  fullscreen.hh  gesture.cc  gesture.hh  jni_util.hh  main.cc  orientation.hh  overlay.cc  overlay.hh  plotview.hh  renderer.cc  renderer.hh  textarea.cc
cmake/: VceShaders.cmake
core/: CMakeLists.txt  animated_float.cc  animated_float.hh  art_texture.cc  art_texture.hh  canvas.cc  canvas.hh  compute_context.cc  frame_input.cc  frame_input.hh  headless.cc  headless.hh  image_layer.cc  image_layer.hh  input.hh  keys.hh  layout.cc  layout.hh  log.hh  overlay.cc  overlay.hh  pager.cc  pager.hh  platform.hh  plotview.cc  renderer.cc  renderer.hh  responsive_text.hh  text_util.cc  text_util.hh  textarea.hh  texture.hh  vulkan_state.cc  vulkan_state.hh  widgets.cc  widgets.hh
core/capture/: CMakeLists.txt  capture.cc  capture.hh
core/tests/: animated_float_test.cc  frame_input_test.cc  layout_test.cc
first_party/img_decode_kit/core/: CMakeLists.txt  img_decode.cc  img_decode.hh
first_party/vulkan_font_engine/: .gitmodules
platform/android/: CMakeLists.txt  app.cc  logcat.bat  orientation.cc  settings.gradle
platform/android/app/: build.gradle
platform/android/app/src/main/assets/shaders/: composite_vert.spv  overlay_frag.spv  tiling.spv
platform/linux/: CMakeLists.txt  README.md  wayland_display.cc  wayland_display.hh  wayland_platform.cc  wayland_platform.hh  wayland_window.cc  wayland_window.hh
platform/windows/: CMakeLists.txt  README.md  main.cc  win32_platform.cc  win32_platform.hh
shaders_src/: image_frag.slang  image_vert.slang  shape_frag.slang  shape_vert.slang
